sdk/Include/LogitechSteeringWheelLib.h

typedef struct LogiControllerPropertiesData
{
	bool forceEnable;
	int overallGain;
	int springGain;
	int damperGain;
	bool defaultSpringEnabled;
	int defaultSpringGain;
	bool combinePedals;
	int wheelRange;
	bool gameSettingsEnabled;
	bool allowGameSettings;
}LogiControllerPropertiesData;
//Play the dirt road effect on the controller at index with the specified parameter
bool LogiPlayDirtRoadEffect(const int index, const int magnitudePercentage);
//Stop the dirt road effect on the controller at index
bool LogiStopDirtRoadEffect(const int index);
//Play the bumpy road effect on the controller at index with the specified parameter
bool LogiPlayBumpyRoadEffect(const int index, const int magnitudePercentage);
//Stop the bumpy road effect on the controller at index
bool LogiStopBumpyRoadEffect(const int index);
//Play the slippery road effect on the controller at index with the specified parameter
bool LogiPlaySlipperyRoadEffect(const int index, const int magnitudePercentage);
//Stop the slippery road effect on the controller at index
bool LogiStopSlipperyRoadEffect(const int index);
//Play the surface effect on the controller at index with the specified parameter
bool LogiPlaySurfaceEffect(const int index, const int type, const int magnitudePercentage, const int period);
//Stop the surface effect on the controller at index
bool LogiStopSurfaceEffect(const int index);
//Play the car airborne effect on the controller at index
bool LogiPlayCarAirborne(const int index);
//Stop the car airborne effect on the controller at index
bool LogiStopCarAirborne(const int index);
//Play the soft stop force on the controller at index with the specified parameter
bool LogiPlaySoftstopForce(const int index, const int usableRangePercentage);
//Stop the soft stop force on the controller at index
bool LogiStopSoftstopForce(const int index);
//Set preferred wheel properties specified by the struct properties
bool LogiSetPreferredControllerProperties(const LogiControllerPropertiesData properties);
//Fills the properties parameter with the current controller properties
bool LogiGetCurrentControllerProperties(const int index, LogiControllerPropertiesData& properties);
//get current shifter mode (gated or sequential)
int LogiGetShifterMode(const int index);
//Sets the operating range in degrees on the controller at the index.
bool LogiSetOperatingRange(const int index, const int range);
//Gets the current operating range in degrees on the controller at the index.
bool LogiGetOperatingRange(const int index, int& range);
//Play the leds on the controller at index applying the specified parameters.
bool LogiPlayLeds(const int index, const float currentRPM, const float rpmFirstLedTurnsOn, const float rpmRedLine);
//Call this function to shutdown the SDK and destroy the controller and wheel objects
void LogiSteeringShutdown();